# mlops-selfservice-platform

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml
platform/cli/: pyproject.toml
platform/cli/mlopsctl/: main.py
platform/infra/terraform/: data.tf  main.tf  outputs.tf  variables.tf
platform/registry/: docker-compose.mlflow.yml
platform/templates/ml-project/: README.md
projects/usedcar-price/: Makefile
projects/usedcar-price/data/: current.csv  train.csv
projects/usedcar-price/monitoring/: drift_job.py  requirements.txt
projects/usedcar-price/serving/: Dockerfile  app.py  requirements.txt
projects/usedcar-price/training/: Dockerfile  requirements.txt  train.py
scripts/: aws_login_ecr.sh  build_push_serving.sh  train_publish.sh
tests/: test_imports.py
