[project]
name = "mlopsctl"
version = "0.1.0"
description = "Self-service MLOps platform CLI (home project)"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pyyaml>=6.0.1",
  "boto3>=1.34.0",
  "requests>=2.31.0",
]

[project.scripts]
mlopsctl = "mlopsctl.main:app"

[tool.ruff]
line-length = 100
